--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 </head>
 <body>
     <div id="app" class="container">
-        <div class="row">
-            <h1>Campeonato Brasileiro 2020 - Série A</h1>
-        </div>
+        <titulo></titulo>
         <div class="row">
             <div class="col-md-12">
                 <button class="btn btn-primary" @click="criarNovoJogo">Novo Jogo</button>
@@ -25,57 +23,10 @@
         <br>
         <div class="row">
             <div class="col-md-12" v-show="visao != 'tabela'">
-                <form class="form-inline">
-                    <input type="text" class="form-control col-md-1" v-model="novoJogo.casa.gols">
-                    <!-- optional chaining aplicada caso alguma das propridades do objeto não -->
-                    {{novoJogo?.casa?.time?.nome}}
-                    <img :src="novoJogo?.casa?.time?.escudo" :alt="novoJogo?.casa?.time?.nome" class="escudo">
-                    <span>X</span>
-                    <img :src="novoJogo?.fora?.time?.escudo" :alt="novoJogo?.fora?.time?.nome" class="escudo">
-                    {{novoJogo?.fora?.time?.nome}}
-                    <input type="text" class="form-control col-md-1" v-model="novoJogo.fora.gols">
-                    <button type="submit" class="btn btn-primary" @click.prevent="fimJogo">Fim de jogo</button>
-                </form>
+                <novo-jogo :time-casa="timeCasa" :time-fora="timeFora" @fim-jogo="mostrarTabela($event)"></novo-jogo>
             </div>
             <div class="col-md-12" v-show="visao == 'tabela'">
-                <input type="text" class="form-control" v-model="busca">
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Nome</th>
-                            <th v-for="(coluna, indice) in ordem.colunas">
-                                <a href="#" @click.prevent="ordenar(indice)">{{coluna | ucWords}}</a>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr v-for="time in timesFiltrados">
-                            <td>
-                                <img :src="time.escudo" :alt="time.nome" class="escudo">
-                                {{time.nome | ucWords}}
-                            </td>
-                            <td>{{time.pontos}}</td>
-                            <td>{{time.gm}}</td>
-                            <td>{{time.gs}}</td>
-                            <!-- <td>{{time | saldo}}</td> -->
-                            <td>{{time.saldo}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <h3>Times classificados para a Libertadores no momento</h3>
-                <ul>
-                    <li v-for="time in timesLibertadores">
-                        <img :src="time.escudo" :alt="time.nome" class="escudo">
-                         {{time.nome | ucWords}}
-                    </li>
-                </ul>
-                <h3>Times rebaixados no momento</h3>
-                <ul>
-                    <li v-for="time in timesRebaixados">
-                        <img :src="time.escudo" :alt="time.nome" class="escudo">
-                         {{time.nome | ucWords}}
-                    </li>
-                </ul>
+                <tabela-clubes :times="times"></tabela-clubes>
                 <h4>Total de gols marcados até agora {{totalDeGolsMarcados}}</h4>
             </div>
         </div>
@@ -84,159 +35,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
 
-    <script>
-        class Time{
-            constructor(nome, escudo) {
-                this.nome = nome;
-                this.escudo = escudo;
-
-                this.pontos = 0;
-                this.gm = 0;
-                this.gs = 0;
-                this.saldo = 0;
-            }
-
-            fimJogo(timeVisitante, golsMarcados, golsSofridos){
-                if(this.foiEmpate(golsMarcados, golsSofridos)){
-                    this.empate(golsMarcados, golsSofridos);
-                    timeVisitante.empate(golsMarcados, golsSofridos);
-                    return;
-                }
-                if(this.foiVitoria(golsMarcados, golsSofridos)){
-                    this.vitoria(golsMarcados, golsSofridos);
-                    timeVisitante.derrota(golsSofridos, golsMarcados)
-                }else{
-                    this.derrota(golsMarcados, golsSofridos);
-                    timeVisitante.vitoria(golsSofridos, golsMarcados)
-                }
-            }
-            foiEmpate(golsMarcados, golsSofridos){
-                return golsMarcados === golsSofridos
-            }
-            foiVitoria(golsMarcados, golsSofridos){
-                return golsMarcados > golsSofridos
-            }
-            atualizarInfos(pontos, golsMarcados, golsSofridos){
-                this.pontos += pontos;
-                this.gm += golsMarcados;
-                this.gs += golsSofridos;
-                this.saldo += this.gm - this.gs;
-            }
-            empate(golsMarcados, golsSofridos){
-                this.atualizarInfos(1,golsMarcados, golsSofridos)
-            }
-            vitoria(golsMarcados, golsSofridos){
-                this.atualizarInfos(3, golsMarcados, golsSofridos)
-            }
-            derrota(golsMarcados, golsSofridos){
-                this.atualizarInfos(0, golsMarcados, golsSofridos)
-            }
-        }
-        new Vue({
-            el: "#app",
-            data:{
-                gols: 10,
-                visao: 'tabela',
-                busca: '',
-                ordem: {
-                    colunas: ['pontos', 'gm', 'gs', 'saldo'],
-                    ordenacao : ['desc', 'desc', 'asc', 'desc']
-                },
-                times: [
-                new Time('palmeiras', 'assets/palmeiras_60x60.png'),
-                new Time('Internacional', 'assets/internacional_60x60.png'),
-                new Time('Flamengo', 'assets/flamengo_60x60.png'),
-                new Time('Atlético-MG', 'assets/atletico_mg_60x60.png'),
-                new Time('Santos', 'assets/santos_60x60.png'),
-                new Time('Botafogo', 'assets/botafogo_60x60.png'),
-                new Time('Atlético-PR', 'assets/atletico-pr_60x60.png'),
-                new Time('Corinthians', 'assets/corinthians_60x60.png'),
-                new Time('Grêmio', 'assets/gremio_60x60.png'),
-                new Time('Fluminense', 'assets/fluminense_60x60.png'),
-                new Time('Bahia', 'assets/bahia_60x60.png'),
-                new Time('Chapecoense', 'assets/chapecoense_60x60.png'),
-                new Time('São Paulo', 'assets/sao_paulo_60x60.png'),
-                new Time('Cruzeiro', 'assets/cruzeiro_60x60.png'),
-                new Time('Sport', 'assets/sport_60x60.png'),
-                new Time('Ceará', 'assets/ceara_60x60.png'),
-                new Time('Vitória', 'assets/vitoria_60x60.png'),
-                new Time('Vasco', 'assets/vasco_60x60.png'),
-                new Time('América-MG', 'assets/america_mg_60x60.png'),
-                new Time('Paraná', 'assets/parana_60x60.png'),
-            ],
-            novoJogo: {
-                casa: {
-                    time: null,
-                    gols:0
-                },
-                fora: {
-                    time: null,
-                    gols: 0
-                }
-            }
-            },
-            //Propriedades dentro de computed vão ser reprocessadas caso algum elemento enterno sofra modificação
-            computed: {
-                timesLibertadores() {
-                    // do indice x até a posição y 
-                    return this.times.slice(0,6);
-                },
-                timesRebaixados() {
-                    return this.times.slice(16, 20);
-                },
-                totalDeGolsMarcados() {
-                    let totalGols = 0;
-                    this.times.map(time => {
-                        totalGols += time.gm
-                    })
-                    return totalGols;
-                },
-                timesFiltrados() {
-                    var times = _.orderBy(this.times, this.ordem.colunas, this.ordem.ordenacao);
-                    var self = this;
-                    return _.filter(times, time => {
-                        var busca = self.busca.toLowerCase();
-                        return time.nome.toLowerCase().indexOf(busca) >= 0;
-                    })
-                }
-            },
-            methods: {
-                valorDigitado($event) {
-                    console.log($event)
-                },
-                criarNovoJogo() {
-                    let indiceCasa = Math.floor(Math.random() * 20);
-                    let indiceFora = Math.floor(Math.random() * 20);
-
-                    this.visao = "placar"
-                    this.novoJogo.casa.time = this.times[indiceCasa];
-                    this.novoJogo.casa.gols = 0;
-                    this.novoJogo.fora.time = this.times[indiceFora];
-                    this.novoJogo.fora.gols = 0;
-                },
-                fimJogo() {
-                    let golsMarcados = parseInt(this.novoJogo.casa.gols);
-                    let golsSofridos = parseInt(this.novoJogo.fora.gols);
-                    let timeCasa = this.novoJogo.casa.time;
-                    let timeFora = this.novoJogo.fora.time;
-
-                    timeCasa.fimJogo(timeFora, golsMarcados, golsSofridos);
-                    this.visao = 'tabela'
-                },
-                ordenar(indice) {
-                    // o vue não consegue observar mudanças em profundidade dos objetos e arrays de seus dados 
-                    this.$set(this.ordem.ordenacao, indice, this.ordem.ordenacao[indice]== 'desc'? 'asc': 'desc')
-                }
-            },
-            filters: {
-                saldo(time) {
-                    return time.gm - time.gs; 
-                },
-                ucWords(valor) {
-                    return valor.charAt(0).toUpperCase() + valor.slice(1);
-                }
-            }
-        })
-    </script>
+    <script src="time.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
