--- a/index.html
+++ b/index.html
@@ -13,25 +13,10 @@
     </style>
 </head>
 <body>
-    <div id="app" class="container">
-        <titulo></titulo>
-        <div class="row">
-            <div class="col-md-12">
-                <button class="btn btn-primary" @click="criarNovoJogo">Novo Jogo</button>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-md-12" v-show="visao != 'tabela'">
-                <novo-jogo :time-casa="timeCasa" :time-fora="timeFora" @fim-jogo="mostrarTabela($event)"></novo-jogo>
-            </div>
-            <div class="col-md-12" v-show="visao == 'tabela'">
-                <tabela-clubes :times="times"></tabela-clubes>
-                <h4>Total de gols marcados até agora {{totalDeGolsMarcados}}</h4>
-            </div>
-        </div>
-        
-    </div>
+    <div id="app"></div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
 
